# falconlauncher

./: README.md  commands.md  components.json  components.json.bak  errors.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri.yml  main.yml  rust.yml
public/: en.xml  fa.xml
src/: App.jsx  App.tsx  FalconClient.jsx  FalconLauncher.jsx  FalconLauncher.tsx  LoginPopup.jsx  LoginPopup.tsx  i18n.js  i18n.ts  index.css  invokes.d.ts  layout.tsx  main.jsx  main.ts  main.tsx  old.tsx  router.ts  router.tsx  style.css  types.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  directory_manager.rs  downloader.rs  error.rs  game_launcher.rs  jdk_manager.rs  lib.rs  main.rs  mirror.rs  mirrors.rs  mod_manager.rs  mods.rs  profile_manager.rs  structs.rs  utils.rs  version_manager.rs
src-tauri/src/commands/: downloader.rs  logger.rs  mirrors.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/models/: config.rs  downloader.rs  error.rs  java.rs  logger.rs  mirror.rs  mod.rs  mods.rs  platform.rs  profiles.rs  versions.rs
src-tauri/src/mods/: mod_manager.rs  modrinth_helper.rs
src-tauri/src/services/: config.rs  directory_manager.rs  downloader.rs  game_launcher.rs  jdk_manager.rs  mod.rs  mod_manager.rs  utils.rs  version_manager.rs
src-tauri/src/structs/: error.rs  fabric.rs  mod_identifiers.rs  version_manifest.rs
src/components/: app-sidebar.tsx  locale-button.tsx  nav-menu.tsx  nav-profile.tsx  nav-user.tsx  profile-switcher.tsx  team-switcher.tsx
src/components/basic/: locale-button.tsx
src/components/block/: profile-maker.tsx  version-manager.tsx
src/components/blocks/: dialogs.tsx
src/components/blocks-old/: profile-maker.tsx  version-manager.tsx
src/components/shadcn-studio/dialog/: dialog-06.tsx  dialog-11.tsx
src/components/ui/: action-button.tsx  button.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  item.tsx  label.tsx  menubar.tsx  radio-group.tsx  select.tsx  sidebar.tsx  sonner.tsx  spinner.tsx
src/components/ui/animated/: swapper.tsx
src/hooks/: use-backend.ts
src/lib/: i18n.ts  utils.ts
src/lib/locale/: en.json  fa.json
src/pages/: console.tsx  downloads.tsx  index.tsx  settings.tsx
src/stores/: config.ts  locale.ts
