[package]
name = "falconlauncher"
version = "0.0.1"
description = "Iranian opensource minecraft launcher"
authors = ["Mmd4J", "Maploop", "MrRsd"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falcon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["unstable"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["stream", "json"] }
sys-info = "*"
zip-extract = "0.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
serde_ini = "*"
tauri-plugin-notification = "2"
zip = "*"
toml = "0.9.4"
discord-sdk = "0.4.0"
tokio = "1.44.2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
