[package]
name = "falconlauncher"
version = "0.0.1"
description = "Iranian opensource minecraft launcher"
authors = ["Mmd4J", "Maploop", "MrRsd"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falcon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["stream", "json"] }
sys-info = "*"
zip-extract = "0.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
serde_ini = "*"
tauri-plugin-notification = "2"
zip = "*"
toml = "0.9.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "*"
which = "7.0.2"
sha2 = "0.10.8"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
base64 = "0.22.1"
encoding_rs = "0.8.35"
tokio = "1.44.2"
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-dialog = "2"
dotenvy = "0.15.7"
tauri-plugin-deep-link = { version = "2.4.3" }
log = "0.4.27"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
